ocaml/testsuite/tests/typing-layouts-word/unboxed_nativeints_beta.compilers.reference
File "unboxed_nativeints_beta.ml", line 19, characters 6-18:
19 |   let _not_allowed = Stdlib__Nativeint_u.of_nativeint 42n in
           ^^^^^^^^^^^^
Error: Non-value layout word detected in [Typeopt.layout] as sort for type
       nativeint#.
       Please report this error to the Jane Street compilers team.
